# mediascanner2

./: .bzrignore  CMakeLists.txt
debian/: changelog  control  libmediascanner-2.0-3.symbols  mediascanner2.0.postinst
snap/: snapcraft.yaml
src/daemon/: CMakeLists.txt  MetadataExtractor.cc  scannerdaemon.cc
src/mediascanner/: Album.hh  CMakeLists.txt  Filter.cc  Filter.hh  MediaFile.hh  MediaFileBuilder.hh  MediaStore.cc  MediaStore.hh  MediaStoreBase.hh  mediascanner-2.0.map  scannercore.hh
src/mediascanner/d-bus/: service-stub.cc  service-stub.hh
src/ms-dbus/: CMakeLists.txt  comcanonicalmediascanner2.cc  comcanonicalmediascanner2.h  main.cc  main2.cc  mediascanner2.xml  qtclient.cc  qtclient.h  qtservice.cc  qtservice.h  service-skeleton.cc  service-skeleton.hh
src/qml/Ubuntu/MediaScanner/: MediaStoreWrapper.cc
src/utils/: CMakeLists.txt
test/: CMakeLists.txt  test_dbus.cc  test_mediastore.cc  test_qml.cc
test/utils/: DBusTest.cpp  DBusTest.h
